MGS-1555 BUGFIX Increased beta banner padding. Attempt to catch tablet portrait button wrapping.

--- a/src/scss/components/_component.notification.scss
+++ b/src/scss/components/_component.notification.scss
@@ -212,7 +212,7 @@ $notification_padding: 14px;
     &--gold,
     &--green {
       .wrapper {
-        padding: 0 15px;
+        padding: 0 10px;
       }
 
       .notification__close {
